--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+.sections {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  gap: 80px;
+}
