--- a/src/index.scss
+++ b/src/index.scss
@@ -61,6 +61,15 @@ a {
   color: inherit;
 }
 
+form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .label-container {
   display: flex;
   flex-direction: column;
