--- a/src/index.scss
+++ b/src/index.scss
@@ -511,6 +511,11 @@ footer a {
 
 .rotate-icon {
   transform-origin: center;
+    transition: transform 0.6s linear;
+
+}
+.rotating {
+  transform: rotate(360deg);
 }
 
 .text {
@@ -1480,3 +1485,4 @@ footer a {
 .button-contaner-card button {
   border-radius: 100px;
 }
+
