--- a/src/index.scss
+++ b/src/index.scss
@@ -511,11 +511,18 @@ footer a {
 
 .rotate-icon {
   transform-origin: center;
-    transition: transform 0.6s linear;
-
 }
 .rotating {
-  transform: rotate(360deg);
+  animation: rotateSpin 0.5s linear infinite;
+}
+
+@keyframes rotateSpin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .text {
@@ -1485,4 +1492,3 @@ footer a {
 .button-contaner-card button {
   border-radius: 100px;
 }
-
