--- a/src/index.scss
+++ b/src/index.scss
@@ -1114,6 +1114,7 @@ footer a {
   min-width: 100px;
   z-index: 1000;
   margin-top: 4px;
+  width: fit-content;
 }
 
 .logout-btn {
@@ -1126,7 +1127,7 @@ footer a {
   text-align: left;
   font-family: "Inter", sans-serif;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.7rem;
   color: var(--text-dark);
   cursor: pointer;
   transition: all 0.3s ease;
