--- a/src/index.scss
+++ b/src/index.scss
@@ -114,6 +114,13 @@ form {
   display: none;
 }
 
+.error{
+  width: 100%;
+  justify-self: center;
+  align-self: center;
+  text-align: center;
+}
+
 .login-button {
   width: 200px;
   height: 44px;
@@ -921,6 +928,8 @@ footer a {
 
 .modal-body {
   display: flex;
+  width: 100%;
+  height: 100%;
   gap: 20px;
 }
 
@@ -1322,6 +1331,19 @@ footer a {
   }
 }
 
+.loading-content{
+  background: color-mix(in srgb, var(--background-body) 60%, transparent);
+    padding: 20px;
+    position: relative;
+    justify-self: center;
+    align-self: center;
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .loader {
   display: flex;
   justify-content: center;
@@ -1345,7 +1367,6 @@ footer a {
 .loader-overlay {
   position: fixed;
   inset: 0;
-  background: rgba(255, 255, 255, 0.85);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1360,13 +1381,13 @@ footer a {
   margin-right: 10px;
 }
 
-.loader-spinner {
-  width: 50px;
-  height: 50px;
-  border: 5px solid #665f55;
-  border-top: 5px solid transparent;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
+@keyframes spinEase {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
