--- a/src/index.scss
+++ b/src/index.scss
@@ -976,6 +976,7 @@ footer a {
 .top-border {
   border-top: 1px solid var(--border-light);
   padding: 12px 0;
+  justify-content: start;
 }
 
 #sizes,
